alterações no teste automatizado

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/akemiriam/teste-ui#readme",
   "devDependencies": {
     "cypress": "^10.10.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
